[project]
name = "quiz-tg-bot"
version = "0.1.0"
description = "A Telegram bot for creating quizzes"
authors = [
    {name = "Maksim"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "colorlog (>=6.10.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false